fleet/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deviceshifu-ingress
  namespace: deviceshifu
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /opcua-led(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: deviceshifu-akri-opcua-led-4263e5
            port:
              number: 80
      - path: /camera(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: deviceshifu-rtsp-139c61
            port:
              number: 80
      - path: /plc(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: deviceshifu-s7-5919d2
            port:
              number: 80
      - path: /web(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: sample-web-service
            port:
              number: 80
